gitops/envs/conf-dso/apps/nexus/templates/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-alternative
  namespace: dso-nexus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: nexus
spec:
  tls:
  - hosts:
    - <path:forge-dso/data/env/conf-dso/apps/common/values#domain | jsonPath {.nexus}>
    secretName: nexus-tls-secret
  ingressClassName: nginx
  rules:
    - host: <path:forge-dso/data/env/conf-dso/apps/common/values#domain | jsonPath {.nexus}>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus
                port:
                  name: http
